# machine-learning-zoomcamp

./: .gitignore  README.md
code/: Dockerfile  Pipfile  ping.py  predict.py  predict_test.ipynb  train.py
homework/: homework-questions-01.md  homework-questions-02.md  homework-questions-03.md  homework-questions-04.md  homework-questions-05.md  homework-questions-06.md  homework-questions-08.md  homework-solutions-01.ipynb  homework-solutions-02.ipynb  homework-solutions-03.ipynb  homework-solutions-04.ipynb  homework-solutions-06.ipynb  homework-solutions-08.ipynb
notes/: notes-week01-intro-linear algebra.ipynb  notes-week01-intro-numpy.ipynb  notes-week01-lecture09-pandas.ipynb  notes-week02-lecture10-data_preparation.ipynb  notes-week02-lecture11-EDA.ipynb  notes-week02-lecture12-validation.ipynb  notes-week02-lecture13-linear_regression.ipynb  notes-week02-project_predict_car_price.ipynb  notes-week03-lecture01-data_preparation.md  notes-week03-lecture02-validation.md  notes-week03-lecture03-eda.md  notes-week03-lecture04-feature_importance.md  notes-week03-lecture05-one_hot_encoding.md  notes-week03-lecture06-logistic_regression.md  notes-week04-lecture01-accuracy.md  notes-week04-lecture02-confusion_matrix.md  notes-week04-lecture03-precision_recall.md  notes-week04-lecture04-roc.md  notes-week04-lecture05-auc.md  notes-week04-lecture06-cross_validation.md  notes-week05-lecture01-save_load_model.md  notes-week05-lecture02-web_services_flask.md  notes-week05-lecture03-serve_model_flask.md  notes-week05-workshop.md  (+14 more)
workshop-kubernetes/service/: pyproject.toml
(+53 files in other folders)
